--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
-JWT_SECRET_KEY=thesecretkeyissaddskuchckhckchchsccchcsch
-UPLOAD_PATH_NAME=http://localhost:8000/uploads/
+JWT_SECRET_KEY=azizganteng
+PATH_FILE=http://localhost:5000/uploads/
 # payment gateway
 SERVER_KEY=SB-Mid-server-0H9DdXzHM0r5N_CIFYd8Uhqk
 CLIENT_KEY=SB-Mid-client-viJBL-THAw0O311V
-EMAIL_SYSTEM=email_here...
-PASSWORD_SYSTEM=password_app...
+EMAIL_SYSTEM=email_system_here...
+PASSWORD_SYSTEM=password_email_system_here...
+DB_HOST=host_here...
+DB_USER=user_here...
+DB_PASSWORD=password_here...
+DB_NAME=database_name_here...
+DB_PORT=database_port_here...
+PORT=5000
+CLOUD_NAME=your_cloud_name_here...
+API_KEY=your_api_key_here...
+API_SECRET=your_api_secret_here...
